frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: 528757804354.dkr.ecr.ap-south-1.amazonaws.com/react-frontend-app:849cf14
        ports:
        - containerPort: 3000
